# vsmap

./: .gitignore  Cargo.toml  Map.toml  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  renderer.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/features/: bed.rs  direction.rs  mod.rs  ores.rs  seal.rs  trade.rs
crates/lib/src/locations/: mine.rs  mod.rs  ruin.rs  trader.rs  translocator.rs
crates/lib/src/map/: mod.rs  renderer.rs  solver.rs
crates/lib/src/measurements/: distance.rs  gradient.rs  mod.rs  relative.rs  vector.rs
crates/web/: Cargo.toml
crates/web/html/: index.html
crates/web/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
