[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
pastey = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
codegen-units = 1
lto = "thin"
